<resources>
    <string name="app_name">DesafioAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="genero">Genero</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="nome_personagem">Nome do personagem</string>
    <string name="cor_cabelo">Cor do cabelo</string>
    <string name="cor_pele">Cor da pele</string>
    <string name="cor_olho">Cor dos olhos</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="planeta_natal">Planeta natal</string>
    <string name="especie">Espécie</string>
    <string name="detalhes_personagem">Outros detalhes</string>
    <string name="descricao_imagem_toolbar">Logo do Star Wars</string>
    <string name="title_activity_teste">Teste</string>
    <string name="exit_app">Sair</string>
    <string name="exit_app_yes">Sim</string>
    <string name="exit_app_no">Não</string>
    <string name="title_activity_favoritos">FavoritosActivity</string>
    <string name="personagens">Personagens</string>
    <string name="favoritos">Meus favoritos</string>
    <string name="lista_favoritos_vazia">Você não possui personagem favorito!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="aguarde">Aguarde...</string>
</resources>
